--- a/index.html
+++ b/index.html
@@ -106,7 +106,16 @@ Some simple C++ programs
 	</p>
 	<p>	
 		It can efficiently solve matrix systems.
+	</p>	
+	<h2>
+		<a href="solve2.html">Solve2 Matrix</a>
+	</h2>
+	<p>	
+		solve2 is a modified version of solve program. 
 	</p>
+	</p>
+		It is optimized for solving matrices with limited number of non-zero near diagonal elements.
+	</p>	
 	<br>
 	<p>
 		Site last modified: Sep. 2016.
